--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
-    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.0.1",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "shortid": "^2.2.16"
   },
